[package]
name = "gwak"
version = "0.0.1"
edition = "2021"
authors = ["Hu Bowen <contact@hubowen.dev>"]

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1.0.125"
termcolor = "1.4.1"
tokio = { version = "1.39.3", features = ["full"] }
